--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
             android:name=".usecases.AR_BarcodeVisionActivity"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".usecases.DetectionOnTheImageActivity"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
 
 
     </application>
